--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <style>
         .outer {
             position: absolute;
-            width: 400px;
+            width: 800px;
             height: 400px;
             margin: auto;
             top: 0;
@@ -24,7 +24,7 @@
 </head>
 <body>
 <div class="outer">
-    <canvas id="canvas" width="100%" height="100%"></canvas>
+    <canvas id="canvas"></canvas>
 </div>
 <script src="main.js"></script>
 </body>
